Working classification_report from sklearn_utils (#1)
* working classification report with mlflow

* sklearn module name

* only 3.9

* remove ds_utility from ci

* add numpy

* add numpy to ci for numpy.typing.mypy_plugin linting test

* add test for mlflow classification report similarity

* square root for comparison

* readme and docstring

* test image size

* normalize

* skimage similarity

* convert images for comparison

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [tool:pytest]
-addopts = -s --strict -vv --cache-clear --doctest-modules --cov=ds_utility --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail
+addopts = -s --strict-markers -vv --cache-clear --doctest-modules --cov=ds_utility --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail
 
 [isort]
 profile = black
