--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,3 +78,6 @@ jobs:
 
     - name: PyPi Deploy
       uses: pypa/gh-action-pypi-publish@v1.3.1
+      with:
+        user: ${{ secrets.PYPI_USER }}
+        password: ${{ secrets.PYPI_PASSWORD }}
